--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
-
+.container{
+	border: 2px solid red;
+	display: flex;
+	flex-flow: row;
+}
+.left{
+	border: 2px solid coral;
+	width: 50%;
+	margin: 10px;
+}
+.f1{
+	display: flex;
+	flex-direction: row;
+}
+.right{
+	margin: 10px;
+	border: 2px solid black;
+	width: 50%;
+}
