--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,17 @@
 }
 .f1{
 	display: flex;
-	flex-direction: row;
+	flex-flow: row wrap;
+	justify-content: space-between;
+}
+.f1 img{
+	height: 40%;
+	width: 40%;
+}
+.fl{
+	border: 2px solid red;
+	margin-right: 20px;
+	padding-right: 20px;
 }
 .right{
 	margin: 10px;
